--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+  }
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -10,16 +15,249 @@
 }
 
 .header {
+  display: flex;
+  position: relative;
+  align-items: center;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  z-index: -1;
   /* выше установили ограничения для секции */
 }
 
+.logo {
+  height: 32px;
+  width: 228px;
+}
+
+.logo_place-header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 3;
+}
+
+.header__title {
+  display: flex;
+  align-items: center;
+  width: 730px;
+  margin-left: 64px;
+  z-index: 3;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: 700;
+  color: #000000;
+}
+
+.header__subtitle {
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  width: 388px;
+  z-index: 3;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.header__link {
+  color: #2f80ed;
+}
+
+.header__main-illustration {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  height: 608px;
+  width: 765px;
+  z-index: 2;
+}
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+
 .header__square-pic {
+  position: absolute;
+  top: 64px;
+  right: 0px;
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+
+}
+
+.description {
+  display: flex;
+  position: relative;
+  margin-top: 100px;
+  min-height: 350px;
+  justify-content: center;
+}
+
+.two-columns {
+  display: flex;
+  width: 80%;
+}
+
+.two-columns__main-text {
+  display: flex;
+  width: 80%;
+  min-width: 784px;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+.two-columns__brief {
+  color: #2f80ed;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.two-columns__paragraph {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 400;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.digits {
+  display: flex;
+  flex-direction: column;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  min-height: fit-content;
+  align-items: center;
+}
+
+.section__title {
+  width: 60%;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 700;
+}
+
+.section__subtitle {
+  width: 60%;
+  text-align: center;
+  padding-top: 20px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 400;
+}
+
+.table {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1100px;
+}
+
+.table__cell {
+  width: 250px;
+  padding-top: 60px;
+}
+
+.table__cell_q {
+  width: 200px;
+  padding-top: 80px;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.table__text {
+  padding-top: 20px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.feynman {
+  display: flex;
+  position: relative;
+  height: 890px;
+  background-color: #f2f2f2;
+  justify-content: center;
+}
+
+.feynman__title {
+  position: absolute;
+  max-width: 648px;
+  padding-top: 100px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 700;
+  text-align: center;
+  z-index: 1;
+  color: #000000;
+}
+
+.feynman__subtitle {
+  position: relative;
+  align-self: center;
+  padding-top: 70px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: 400;
+  text-align: center;
+  z-index: 1;
+  color: #000000;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: 400;
+  color: #2f80ed;
+}
+
+.feynman__background-pic {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  height: 637px;
+  width: 867px;
+}
+
+.kaufman {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  padding-top: 90px;
+  padding-bottom: 90px;
+  min-height: 600px;
+  align-items: center;
+  background-color: #1f1f1f;
+  overflow: hidden;
+  z-index: -2;
+
+}
+
+.kaufman__triangle {
+  height: 877px;
+  width: 877px;
+  position: absolute;
+  top: 0px;
+  right: -210px;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.table__text_theme_dark {
+  color: #ffffff;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -28,4 +266,83 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.footer {
+  min-height: 350px;
+  background-color: #1f1f1f;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  box-sizing: border-box;
+  color: #ffffff;
+}
+
+.footer__columns {
+  flex-basis: 711px;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.logo_place-footer {
+  padding-bottom: 125px;
+}
+
+.footer__column_content-copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: 400;
+  display: flex;
+  padding-top: 18px;
+  padding-bottom: 18px;
+
+}
+
+.footer__column-heading {
+  padding-bottom: 20px;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: left;
+
+}
+
+.footer__column-links {
+  padding-bottom: 16px;
+  text-align: left;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.footer__column_content-social {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__social-icon {
+  height: 16px;
+  width: 16px;
+  padding-right: 10px;
+  text-align: left;
+
+}
+
+.footer__column_content-info {
+  display: flex;
+  flex-direction: column;
+}
+
+ul {
+  list-style-type: none;
 }
