--- a/styles/style.css
+++ b/styles/style.css
@@ -87,7 +87,6 @@
   display: flex;
   position: relative;
   margin-top: 100px;
-  min-height: 350px;
   justify-content: center;
 }
 
@@ -103,6 +102,7 @@
   min-width: 784px;
   flex-direction: column;
   justify-content: space-between;
+  gap: 30px;
 
 }
 
@@ -165,11 +165,14 @@
   justify-content: space-between;
   width: 1100px;
   color: #000000;
+  margin: 0px;
+  padding: 0px;
+  list-style-type: none;
 }
 
 .table__cell {
   width: 250px;
-  padding-top: 60px;
+  margin-top: 60px;
   color: #000000;
 }
 
@@ -233,6 +236,7 @@
   font-size: 36px;
   font-weight: 400;
   color: #2f80ed;
+  text-decoration: none;
 }
 
 .feynman__background-pic {
@@ -249,7 +253,6 @@
   flex-direction: column;
   padding-top: 90px;
   padding-bottom: 90px;
-  min-height: 600px;
   align-items: center;
   background-color: #1f1f1f;
   overflow: hidden;
@@ -264,14 +267,15 @@
   top: 0px;
   right: -210px;
   background-image: url(../images/kaufman-triangle.svg);
+  background-size: cover;
   z-index: -1;
 }
 
-.section-title__theme_dark {
+.section-title_theme_dark {
   color: #ffffff;
 }
 
-.section-subtitle__theme-dark {
+.section-subtitle_theme-dark {
   color: #ffffff;
 }
 
@@ -292,8 +296,7 @@
   width: 200px;
   color: white;
   margin-right: 0;
-  margin-top: 20px;
-  /* Так как в table__cell отступ сверху равен 60px по брифу для секции digits, я решила просто добавить здесь необходимые 20px.*/
+  margin-top: 80px;
 }
 
 .footer {
@@ -312,10 +315,11 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  min-height: 250px;
 }
 
-.logo_place-footer {
-  padding-bottom: 125px;
+.logo_place_footer {
+  background-color: #1f1f1f;
 }
 
 .footer__column_content_copyright {
