--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -4,7 +4,7 @@
   position: absolute;
   top: 0px;
   right: -210px;
-  background-image: url(/images/kaufman-triangle.svg);
+  background-image: url(../../../images/kaufman-triangle.svg);
   background-size: cover;
   z-index: -1;
   animation: rotation 20s linear infinite;
