--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -6,5 +6,5 @@
   width: 568px;
   background-color: #2f80ed;
   transform-origin: center;
-  animation: rotation 20s linear infinite;
+  z-index: -3;
 }
