--- a/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
+++ b/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
@@ -2,6 +2,7 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: normal;
-  padding: 0px;
+  padding: 0;
+  margin: 0;
   margin-top: 10px;
 }
