--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,10 +1,12 @@
 .video__iframes {
   display: flex;
-  height: 315px;
+  position: relative;
   list-style-type: none;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 50px;
+  margin-top: 0;
   padding: 0px;
+  bottom: -60px;
+  z-index: 1;
   column-gap: 20px;
 }
